correct width for description and bigger point size to disable auto-scroll on mobile browser

--- a/public/css/juxtagraph.css
+++ b/public/css/juxtagraph.css
@@ -86,14 +86,16 @@ html, body {
 .description {
     font-family: 'Montserrat-Light', Montserrat, Helvetica, Sans-Serif;
     -webkit-font-smoothing: antialiased;
-    font-size: 15px;
+    font-size: 16px;
 
     vertical-align: top;
     padding: 15px;
     width: 100vw;
-    /*height: 72px;*/
-    z-index: 100;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 
+    z-index: 100;
     resize: none;
     border-left: none;
     border-right: none;
